background layout bug on mobile #15

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,13 +10,19 @@
 
 /* background image */
 body {
-  background-image: url("../resources/background.jpg");
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: 100vw 100vh;
   font-family: pokemonFontSolid;
-  transform: translate3d(0,0,0);
--webkit-transform: translate3d(0,0,0);
+}
+
+.background_wrap {
+  z-index: -1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-size: 100%;
+  background-image: url("../resources/background.jpg");
+  background-attachment: fixed;
 }
 
 .navbar {
